incubator-kie-issues#280: Fix `jbpm-quarkus-devui` to adapt it to the new  Quarkus 3 Dev UI. (#2018)
* incubator-kie-issues#280: Fix `jbpm-quarkus-devui` to adapt it to the new  Quarkus 3 Dev UI.
* fixed `jbpm-quarkus-devui`: added Dev UI Cards, replaced Qute templates to JS component, added recorder for static resources, fixed data-index url lookup & restored badges

* fixed `sonataflow-quarkus-devui`: added recorder for static resources & fixed data-index url lookup

* restoring `dynamicLabelJsonRPCMethodName`.